// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FeedbackDialog component > renders alert type with 1 buttons and dismissable: false 1`] = `
<body>
  <div>
    <div
      class="modal-wrapper"
    >
      <div
        class="modal-background light"
      />
       
      <div
        aria-modal="true"
        class="modal-positioning"
      >
        <div
          aria-describedby="tao-description-123"
          aria-labelledby="tao-heading-123"
          class="dialog inverted"
          role="dialog"
          tabindex="-1"
        >
           
          <h2
            class="ui-heading"
            id="tao-heading-123"
          >
            Header
          </h2>
           
          <div
            id="tao-description-123"
          >
            <p>
              Message
            </p>
          </div>
           
           
          <div
            class="actions aligned-end"
          >
            <button
              class="actionable primary pill medium fullwidth"
              type="button"
            >
               
               
              Btn1
            </button>
          </div>
        </div>
        
      </div>
    </div>
    
  </div>
</body>
`;

exports[`FeedbackDialog component > renders confirm type with 2 buttons and dismissable: true 1`] = `
<body>
  <div>
    <div
      class="modal-wrapper"
    >
      <div
        class="modal-background light"
      />
       
      <div
        aria-modal="true"
        class="modal-positioning"
      >
        <div
          aria-describedby="tao-description-123"
          aria-labelledby="tao-heading-123"
          class="dialog inverted"
          role="dialog"
          tabindex="-1"
        >
           
          <h2
            class="ui-heading"
            id="tao-heading-123"
          >
            Header
          </h2>
           
          <div
            id="tao-description-123"
          >
            <p>
              Message
            </p>
          </div>
           
           
          <div
            class="actions aligned-end"
          >
            <button
              class="actionable primary pill medium"
              type="button"
            >
               
               
              Btn1
            </button>
            <button
              class="actionable secondary pill medium"
              type="button"
            >
               
               
              Btn2
            </button>
          </div>
        </div>
        
      </div>
    </div>
    
  </div>
</body>
`;

exports[`FeedbackDialog component > renders modal dialog with props 1`] = `
<body>
  <div>
    <div
      class="modal-wrapper"
    >
      <div
        class="modal-background light"
      />
       
      <div
        aria-modal="true"
        class="modal-positioning"
      >
        <div
          aria-describedby="tao-description-123"
          aria-labelledby="tao-heading-123"
          class="dialog inverted"
          role="dialog"
          tabindex="-1"
        >
           
          <h2
            class="ui-heading"
            id="tao-heading-123"
          >
            Header
          </h2>
           
          <div
            id="tao-description-123"
          >
            <p>
              Message
            </p>
          </div>
           
           
          <div
            class="actions aligned-end"
          >
            <button
              class="actionable primary pill medium"
              type="button"
            >
               
               
              Btn1
            </button>
            <button
              class="actionable secondary pill medium"
              type="button"
            >
               
               
              Btn2
            </button>
            <button
              class="actionable secondary pill medium"
              type="button"
            >
               
               
              Btn3
            </button>
          </div>
        </div>
        
      </div>
    </div>
    
  </div>
</body>
`;

exports[`FeedbackDialog component > renders multiline message 1`] = `
<body>
  <div>
    <div
      class="modal-wrapper"
    >
      <div
        class="modal-background light"
      />
       
      <div
        aria-modal="true"
        class="modal-positioning"
      >
        <div
          aria-describedby="tao-description-123"
          aria-labelledby="tao-heading-123"
          class="dialog inverted"
          role="dialog"
          tabindex="-1"
        >
           
          <h2
            class="ui-heading"
            id="tao-heading-123"
          >
            Header
          </h2>
           
          <div
            id="tao-description-123"
          >
            <p>
              First line
            </p>
            <p>
              
            </p>
            <p>
              Second line
            </p>
            <p>
              Third line
            </p>
          </div>
           
           
          <div
            class="actions aligned-end"
          >
            <button
              class="actionable primary pill medium fullwidth"
              type="button"
            >
               
               
              Btn1
            </button>
          </div>
        </div>
        
      </div>
    </div>
    
  </div>
</body>
`;
